# vcf-variant-tools

./: Dockerfile  Makefile  README.md  gitignore  pyproject.toml
.github/workflows/: ci.yaml
tests/: conftest.py  test_normalizer.py  test_overlap.py
tests/data/: test_reference.fa  test_transcripts.gff3  test_variants.vcf
vcf_variant_tools/: normalizer.py  overlap.py
